--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -296,6 +296,21 @@ button::-moz-focus-inner {
   display: flex;
 }
 
+.account-item {
+  background: #a69cac;
+  border-radius: 5px;
+  overflow: auto;
+  padding: 10px;
+  margin: 0 0 15px 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+.bal span.item-content{
+  color: green;
+  font-size: 18px;
+}
+
 .transaction-item i.debit{
   color: red;
 }
@@ -324,6 +339,64 @@ button::-moz-focus-inner {
   margin-left: 5px;
   display: flex;
   justify-content: flex-start;
+}
+
+#create {
+  position: fixed;
+  bottom: 55px;
+  right: 15px;
+  color: #e0e0e0;
+  font-size: 30px;
+  background: #0d1b2a;
+  border: 1px solid #1b263b;
+  box-shadow: 5px 5px 15px -5px rgb(0, 0, 0);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  padding: 5px;
+  transition: 1s;
+}
+
+#create:hover {
+  color: #e0e0e0;
+  background: #474973;
+  border: 1px solid #474973;
+}
+
+.modal {
+  display: none; 
+  position: fixed;
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 30% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  border-radius: 10px;
+  width: 80%;
+}
+
+.close {
+  color: #778da9;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #1b263b;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 footer {
@@ -406,6 +479,12 @@ footer {
   
   .item-content {
     font-size: 18px;
+  }
+
+  .modal-content {
+    text-align: center;
+    margin: 20% auto;
+    width: 70%;
   }
 }
 
@@ -498,5 +577,11 @@ footer {
   
   .item-content {
     font-size: 17px;
+  }
+
+  .modal-content {
+    text-align: center;
+    margin: 10% auto auto auto;
+    width: 60%;
   }
 }
