feat(UI): Admin create admin or staff accounts - work on superuser.html page for admin to create staff or other admin accounts - style page [Delivers #164741645]

--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -183,6 +183,67 @@ input::placeholder {
   font-style: italic;
 }
 
+ .switch {
+  position: relative;
+  width: 60px;
+  height: 34px;
+  float: left;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: #a69cac;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #474973;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+  border: 1px solid #161b33;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.instruction {
+  color: #ff00007c;
+  font-style: italic;
+}
+
 .submit-btn {
   height: 45px;
   width: 100%;
@@ -371,7 +432,7 @@ button::-moz-focus-inner {
 .modal {
   display: none; 
   position: fixed;
-  z-index: 1; /* Sit on top */
+  z-index: 1;
   left: 0;
   top: 0;
   width: 100%; 
