fix(button): fix transaction button hover color
- change transaction button hover color to match the new color
[Delivers #165347914]

--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -616,8 +616,8 @@ button::-moz-focus-inner {
 }
 
 .staff .transaction:hover{
-  background-color: #137a29d0;
-  border-color: green;
+  background-color: #474973;
+  border-color: #474973;
 }
 
 footer {
