fix(UI): home page nav links
- increase font size for sign up and sign in buttons

[Delivers #165380067]

--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -769,6 +769,11 @@ footer {
   .header-links {
     margin-top: -35px;
     float: right;
+    padding-bottom: 5px;
+  }
+
+  .header-links .a-nav {
+    font-size: 19px;
   }
 
   .nav-link {
