--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -457,10 +457,34 @@ button::-moz-focus-inner {
   transition: 1s;
 }
 
+#edit {
+  position: fixed;
+  bottom: 55px;
+  right: 15px;
+  color: #e0e0e0;
+  opacity: 0.3;
+  font-size: 20px;
+  background: #0d1b2a;
+  border: 1px solid #1b263b;
+  box-shadow: 5px 5px 15px -5px rgb(0, 0, 0);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  padding: 5px;
+  transition: 1s;
+}
+
 #create:hover {
   color: #e0e0e0;
   background: #474973;
   border: 1px solid #474973;
+}
+
+#edit:hover {
+  opacity: 1;
+  color: #e0e0e0;
+  background: #0d1b2a;
+  border: 1px solid #0d1b2a;
 }
 
 .modal {
@@ -494,6 +518,42 @@ button::-moz-focus-inner {
 
 .close:hover,
 .close:focus {
+  color: #1b263b;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal1 {
+  display: none; 
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
+}
+
+.modal-content1 {
+  background-color: #fefefe;
+  margin: 30% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  border-radius: 10px;
+  width: 80%;
+}
+
+.close1 {
+  color: #778da9;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close1:hover,
+.close1:focus {
   color: #1b263b;
   text-decoration: none;
   cursor: pointer;
@@ -595,8 +655,8 @@ button::-moz-focus-inner {
   width: 100%;
   color: #ffffff;
   font-size: 15px;
-  background-color: #ff0000;
-  border: 1px solid #ff0000;
+  background-color: #b82020;
+  border: 1px solid #b82020;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.911);
   border-radius: 10px;
   margin-top: 10px;
