--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -445,9 +445,27 @@ button::-moz-focus-inner {
   justify-content: space-around;
 }
 
-.bal span.item-content{
-  color: green;
-  font-size: 18px;
+.acct {
+  flex: 2;
+}
+
+.info {
+  flex: 1;
+}
+
+.info button {
+  color: #e0e0e0;
+  font-size: 10px;
+  background: #0d1b2a;
+  border: 1px solid #1b263b;
+  box-shadow: 5px 5px 15px -5px rgb(0, 0, 0);
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+}
+
+.large-screen {
+  display: none;
 }
 
 .credit {
@@ -932,6 +950,22 @@ footer {
     margin: -10px !important;
     width: 100%;
     height: 450px;
+  }
+
+  .info button {
+    color: #e0e0e0;
+    font-size: 15px;
+    border-radius: 30px;
+    width: 80px;
+    height: 30px;
+  }
+
+  .large-screen {
+    display: block;
+  }
+
+  .info i {
+    display: none;
   }
 }
 
