--- a/UI/css/styles.css
+++ b/UI/css/styles.css
@@ -751,7 +751,7 @@ button::-moz-focus-inner {
   width: 50%;
   color: #c0c0c0;
   font-size: 20px;
-  background-color: #a3a6b5;
+  background-color: #161b33;
   border: 1px solid #161b33;
   border-radius: 10px;
   margin: 0 0 10px 0;
